valid token update

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -37,6 +37,7 @@ jobs:
         with:
           name: release-dists
           path: dist/
+          
 
   pypi-publish:
     runs-on: ubuntu-latest
@@ -61,8 +62,8 @@ jobs:
       - name: Retrieve release distributions
         uses: actions/download-artifact@v4
         with:
-          name: release-dists
-          path: dist/
+          packages-dir: dist/
+          password: ${{ secrets.PYPI_API_TOKEN }}
 
       - name: Publish release distributions to PyPI
         uses: pypa/gh-action-pypi-publish@release/v1
